<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StatusFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/status_background"
            android:contentDescription="@string/success_image" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_done_24"
            android:contentDescription="@string/success_image" />

        <TextView
            android:id="@+id/status"
            style="@style/CustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/success" />

        <TextView
            android:id="@+id/transaction_description"
            style="@style/CustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/transaction_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/status_go_to_home"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/go_to_home"
            android:textAllCaps="false" />

    </RelativeLayout>

</FrameLayout>