<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddCustomerFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:hint="@string/name"
                android:textColorHint="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_account_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_name_layout"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:hint="@string/account_number"
                android:textColorHint="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_bank_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_account_layout"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:hint="@string/bank_name"
                android:textColorHint="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_money_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_bank_layout"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:hint="@string/enter_your_total_money"
                android:textColorHint="?attr/colorPrimary"
                app:boxStrokeColor="?attr/colorPrimary"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/customer_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_customer"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/confirm_customer"
                android:textAllCaps="false" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>